<resources>
    <string name="app_name">ReTasker</string>
    <string name="action_add">Add</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="addTitle">Add new Task</string>
    <string name="nameTask">Name your Task</string>
    <string name="editTitle">Edit the Task</string>
    <string name="okBtn">Ok</string>
    <string name="cancelBtn">Cancel</string>
    <string name="action_debug">Debug</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="once">Once</string>
    <string name="weekly">Weekly</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="resetDB">Reset Database</string>
    <string name="drop">Drop</string>
    <string name="clickAgain">Please click "Drop" again to drop the database...</string>
    <string name="droppedDB">Dropped database...</string>
    <string name="NotMovingFutureTasks">Can\'t move future tasks</string>

    <string name="filter">Filter:</string>
    <string name="all">All</string>
    <string name="noNameEntered">You haven\'t entered a name for the task</string>
</resources>
