<menu xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/action_home"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/action_add"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:textColor="@color/mainBackground"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_debug"
        android:title="@string/action_debug"
        android:textColor="@color/mainBackground"
        app:showAsAction="never"/>


</menu>